--- a/pages/home.html
+++ b/pages/home.html
@@ -8,3 +8,11 @@
     </div>
   </div>
 </div>
+  <!-- Menu Toggle Script -->
+  <script>
+  $("#menu-toggle").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+  });
+  </script>
+
