--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
 </head>
 
 <body>
-
-  <div id="wrapper">
-
+<!-- The nav tag is an HTML5 thing. And according to http://www.w3.org/WAI/GL/wiki/Using_HTML5_nav_element, 
+      "in order to make the structure more accessible to user agents that support ARIA as well as ensuring that user agents that don't support HTML5 can also understand the structure, adding the ARIA role="navigation" is advised."  So it's really optional.  When HTML5 support is better, it won't 
+      be needed.
+     -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Hamburger</a>
+    </nav>
+ 
     <!-- Sidebar -->
-    <div id="sidebar-wrapper">
+    <div id="wrapper">
+      <div id="sidebar-wrapper">
         <div>
           <img id="hippo" src="https://dl.dropboxusercontent.com/s/42bk7jhf6by0ric/WWMGravitar.jpg">
         </div>
@@ -69,7 +75,8 @@
       <!-- /#page-content-wrapper -->
 
   </div>
-  <!-- /#wrapper -->
+
+   <!-- /.navbar -->
   <!-- jQuery -->
   <script src="js/jquery.js"></script>
 
