--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,58 @@
-<div id="about" class="container-fluid">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1>About</h1>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active" id="slide-1">
+      <img src="../images/towardsTaos14.jpg" alt="Boundary Trail">
+		  <div class="carousel-caption">
+    		<h3>Climbing a mountain on a bike with Bagger & Chispas: The Boundary Trail near Taos New Mexico</h3>
+  		</div>
+    </div>
+
+    <div class="item" id="slide-2">
+      <img src="../images/talum14.jpg" alt="Talum">
+		  <div class="carousel-caption">
+    		<h3>Hiking around Mayan Ruins near Talum Mexico with Missy Momma</h3>
+  		</div>
+    </div>
+
+    <div class="item" id="slide-3">
+      <img src="../images/monroeBoyz.jpg" alt="Monroe Boyz">
+		  <div class="carousel-caption">
+    		<h3>The Mo Bro's: Jeremy, Spencer & Ben</h3>
+  		</div>
+    </div>
+
+    <div class="item" id="slide-4">
+      <img src="../images/houseConcert.jpg" alt="House Concert">
+		  <div class="carousel-caption">
+    		<h3>House Concerts: Amazing Acoustic Music by Kim Warner & Carl Minor</h3>
+  		</div>
     </div>
   </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
+<!-- <div class="row">
+	<div class="container">
+		<div id="about" class="jumbotron bg">
+    	<h1>About</h1>
+    </div>	
+  </div>
+</div>
+ -->
