--- a/pages/medium.html
+++ b/pages/medium.html
@@ -1,7 +1,7 @@
 <script async src="https://static.medium.com/embed.js"></script>
 
 <div>
-	<a class="m-collection" href="https://medium.com/growing-participation-in-cs-education">
+	<a class="m-collection" data-width="100%" data-border="false" href="https://medium.com/growing-participation-in-cs-education">
 		Growing Participation in CS Education
 	</a>
 </div>
