Moved the left nav down and replace the word hamburger with a bootstrap gliff.  Also remove the top and left margin in the carosel and added a first blog entry.

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       "in order to make the structure more accessible to user agents that support ARIA as well as ensuring that user agents that don't support HTML5 can also understand the structure, adding the ARIA role="navigation" is advised."  So it's really optional.  When HTML5 support is better, it won't 
       be needed.
      -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Hamburger</a>
+    <nav class="navbar navbar-wrapper navbar-inverse navbar-fixed-top" role="navigation">
+      <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><span class="glyphicon glyphicon-menu-hamburger"></span></a>
     </nav>
  
     <!-- Sidebar -->
