--- a/pages/home.html
+++ b/pages/home.html
@@ -1,10 +1,14 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-12">
-      <h1>Simple Sidebar</h1>
-      <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-      <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-      <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+      <h1>Old Settlers 2015 - Great lineup and fun all around</h1>
+      <p>2015 Old Settlers has come and gone, and a great time was had by all.  As usual, the "settle in" was awesome.</p>
+      <img src="../images/OSMF2015Montage.jpeg" alt="Old Settlers Montage">
+    </br>
+        Up first was <a href="http://www.norajanestruthers.com/">Nora Jane Struthers & the Party Line</a>.  Pav and I saw Nora Jane a few years ago at Ricegrass when she was with Barefoot Bluegrass.  It was awesome then, it's awesome now.  One of my favorite tunes is still "Midnight in Montana" which has great advice for parents that are trying to get their kids goin'..."You can't get no where...unless you go!".</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gqUGMnKshkI" frameborder="0" allowfullscreen> </iframe></p>
+      <!-- <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p> -->
+      <!-- <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a> -->
     </div>
   </div>
 </div>
