--- a/_posts/2015-04-20-old-settlers-2015.html
+++ b/_posts/2015-04-20-old-settlers-2015.html
@@ -1,26 +1,21 @@
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1>Old Settlers 2015 - Great lineup and fun all around</h1>
-      <p>2015 Old Settlers has come and gone, and a great time was had by all.  As usual, the "settle in" was awesome.</p>
-      <img src="../images/OSMF2015Montage.jpeg" class="img-responsive" alt="Old Settlers Montage">
-    </br>
-      <p>Up first was <a href="http://www.norajanestruthers.com/">Nora Jane Struthers & the Party Line</a>.  Pav and I saw Nora Jane a few years ago at Ricegrass when she was with Barefoot Bluegrass.  It was awesome then, it's awesome now.  One of my favorite tunes is still "Midnight in Montana" which has great advice for parents that are trying to get their kids goin'..."You can't get no where...unless you go!".</p>
-    <div class="video-container">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/gqUGMnKshkI" frameborder="0" allowfullscreen> </iframe>
-    </div>
-    </br>
-      <p>Rose, Elise and I got camp set up, met the neighbors and got to play a few tunes before we headed back out to see the Infamous Stringdusters.  We had a burst of rain, but the settle in came off without a hitch.</p>
-      <p>I worked in the merchandise tent Friday an AM of pickin' with Rose and David.  Light rain did not really put a damper on things and I had a great view of the main stage.  Milk Drive, Sam Bush and then the Mavircks were awesome.  Unfortunately after standing for 7+ hour pushing t-shirts etc, I was too tired to do the camp ground circuit.  Lucky for me Missy stuck around after her shift in the box office, and we went home</p>
-      <p>As luck would have it, I got to go for a ride with Andy Hicks Saturday AM, and he and Shannon had been thinking of coming out to see Robert Earl Keen at the fest on Saturday.</p>
-
-    <div class="video-container">
-      <iframe height='405' width='590' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/activities/287842816/embed/4f738dc1e742becd4ad1d3e41cbe9e669e7cfe43'></iframe>
-    </div>
-    </br>
-    <p>Missy and I got back out in time to see Bruce Robison and Kelly Willis before the serious rain hit.</p>
-      <!-- <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p> -->
-      <!-- <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a> -->
-    </div>
-  </div>
+---
+layout: post
+---
+<h1>Old Settlers 2015 - Great lineup and fun all around</h1>
+<p>2015 Old Settlers has come and gone, and a great time was had by all.  As usual, the "settle in" was awesome.</p>
+<img src="../images/OSMF2015Montage.jpeg" class="img-responsive" alt="Old Settlers Montage">
+</br>
+<p>Up first was <a href="http://www.norajanestruthers.com/">Nora Jane Struthers & the Party Line</a>.  Pav and I saw Nora Jane a few years ago at Ricegrass when she was with Barefoot Bluegrass.  It was awesome then, it's awesome now.  One of my favorite tunes is still "Midnight in Montana" which has great advice for parents that are trying to get their kids goin'..."You can't get no where...unless you go!".</p>
+<div class="video-container">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/gqUGMnKshkI" frameborder="0" allowfullscreen> </iframe>
 </div>
+</br>
+<p>Rose, Elise and I got camp set up, met the neighbors and got to play a few tunes before we headed back out to see the Infamous Stringdusters.  We had a burst of rain, but the settle in came off without a hitch.</p>
+<p>I worked in the merchandise tent Friday an AM of pickin' with Rose and David.  Light rain did not really put a damper on things and I had a great view of the main stage.  Milk Drive, Sam Bush and then the Mavircks were awesome.  Unfortunately after standing for 7+ hour pushing t-shirts etc, I was too tired to do the camp ground circuit.  Lucky for me Missy stuck around after her shift in the box office, and we went home</p>
+<p>As luck would have it, I got to go for a ride with Andy Hicks Saturday AM, and he and Shannon had been thinking of coming out to see Robert Earl Keen at the fest on Saturday.</p>
+
+<div class="video-container">
+<iframe height='405' width='590' frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/activities/287842816/embed/4f738dc1e742becd4ad1d3e41cbe9e669e7cfe43'></iframe>
+</div>
+</br>
+<p>Missy and I got back out in time to see Bruce Robison and Kelly Willis before the serious rain hit.</p>
