--- a/pages/about.html
+++ b/pages/about.html
@@ -1,3 +1,7 @@
+---
+layout: default
+---
+
 <div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -48,11 +52,3 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-<!-- <div class="row">
-	<div class="container">
-		<div id="about" class="jumbotron bg">
-    	<h1>About</h1>
-    </div>	
-  </div>
-</div>
- -->
