--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,7 +5,8 @@ layout: default
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-12">
-      <h1>Contact</h1>
+      <h1>Projects</h1>
+      <p>Coming Soon!  The start of the CS Course Inventory</p>
     </div>
   </div>
 </div>
