--- a/_posts/2015-04-20-old-settlers-2015.html
+++ b/_posts/2015-04-20-old-settlers-2015.html
@@ -1,9 +1,10 @@
 ---
 layout: post
+excerpt_separator: <!--more-->
 ---
-<h1>Old Settlers 2015 - Great lineup and fun all around</h1>
 <p>2015 Old Settlers has come and gone, and a great time was had by all.  As usual, the "settle in" was awesome.</p>
-<img src="../images/OSMF2015Montage.jpeg" class="img-responsive" alt="Old Settlers Montage">
+<!--more-->
+<img src="/images/OSMF2015Montage.jpeg" class="img-responsive" alt="Old Settlers Montage">
 </br>
 <p>Up first was <a href="http://www.norajanestruthers.com/">Nora Jane Struthers & the Party Line</a>.  Pav and I saw Nora Jane a few years ago at Ricegrass when she was with Barefoot Bluegrass.  It was awesome then, it's awesome now.  One of my favorite tunes is still "Midnight in Montana" which has great advice for parents that are trying to get their kids goin'..."You can't get no where...unless you go!".</p>
 <div class="video-container">
