--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@ layout: default
 ---
 <div class="row-fluid">
 	<div class="col-md-8">
-		<ul>
-		  {% for post in site.posts limit: 5 %}
-		    <li><a href="{{ post.url }}">{{ post.title }}</a>
-		      {{ post.excerpt }}
-		    </li>
-		  {% endfor %}
-		</ul>
+		{% for post in site.posts limit: 5 %}
+		<div class="parent">
+			<h2>{{ post.title }}</h2>
+	    <h4>{{ post.date | date_to_long_string }}</h4>
+	    <img src="{{ post.image }}", class="img-responsive" align="left", width=250, height=100%, style="padding-right: 20px">
+	    {{ post.excerpt | strip_html | truncatewords: 50 }}
+	    <p>
+	      <a href="{{ post.url }}">Read Post</a>
+	    </p>
+	  </br>
+	  </div>	  
+		{% endfor %}
 	</div>
 	<div class="col-md-4">
 	    {% include sidebar.html %}
