--- a/pages/home.html
+++ b/pages/home.html
@@ -1,10 +1,10 @@
 ---
-layout: null
+layout: default
 ---
 <ul>
   {% for post in site.posts limit: 5 %}
     <li><a href="{{ post.url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
+      {{ post.image }}
     </li>
   {% endfor %}
 </ul>
