No need to stash _sites in git as it's all generated. changed the location of the favicon and added the appropriate link path to the index.  Also, moved images to assets so we can keep everything organized.

--- a/pages/about.html
+++ b/pages/about.html
@@ -14,28 +14,28 @@ layout: default
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active" id="slide-1">
-      <img src="../images/towardsTaos14.jpg" alt="Boundary Trail">
+      <img src="/assets/towardsTaos14.jpg" alt="Boundary Trail">
 		  <div class="carousel-caption">
     		<h2>Climbing a mountain on a bike with Bagger & Chispas: The Boundary Trail near Taos New Mexico</h2>
   		</div>
     </div>
 
     <div class="item" id="slide-2">
-      <img src="../images/talum14.jpg" alt="Talum">
+      <img src="/assets/talum14.jpg" alt="Talum">
 		  <div class="carousel-caption">
     		<h2>Hiking around Mayan Ruins near Talum Mexico with Missy Momma</h2>
   		</div>
     </div>
 
     <div class="item" id="slide-3">
-      <img src="../images/monroeBoyz.jpg" alt="Monroe Boyz">
+      <img src="/assets/monroeBoyz.jpg" alt="Monroe Boyz">
 		  <div class="carousel-caption">
     		<h2>The Mo Bro's: Jeremy, Spencer & Ben</h2>
   		</div>
     </div>
 
     <div class="item" id="slide-4">
-      <img src="../images/houseConcert.jpg" alt="House Concert">
+      <img src="/assets/houseConcert.jpg" alt="House Concert">
 		  <div class="carousel-caption">
     		<h2>House Concerts: Amazing Acoustic Music by Kim Warner & Carl Minor</h2>
   		</div>
