Added a powr.io form for contact, and added a project page that has a 400x400 square for each project...which at the time is only one project :-)

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,7 +6,20 @@ layout: default
   <div class="row">
     <div class="col-lg-12">
       <h1>Projects</h1>
-      <p>Coming Soon!  The start of the CS Course Inventory</p>
+      <div>
+		      <a href="/pages/projects/myAmazon.html">
+		      	<div class="project project1 hvr-border-fade">
+    		  		<div class="text"> This projects uses a simple product list and allows the user to search and sort the list based on title, price and categories.  
+    		  			<ul>Uses:
+    		  				<li>Bootstrap (Nav and Labels)</li>
+    		  				<li>jQuery</li>
+    		  				<li>underscore.js</li>
+    		  				<li>Functional Programming: map</li>
+    		  			</ul>
+      				</div>
+			    	</div>	
+	    	</a>
+    	</div>
     </div>
   </div>
 </div>
