--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@ layout: default
 <div class="container-fluid">
   <div class="row">
     <div class="col-lg-12">
-      <h1>Contact</h1>
+		 	<div class="powr-form-builder" label="1308185"></div>
     </div>
   </div>
 </div>
